# nst-saas

./: .gitignore  README.md
.github/workflows/: cicd.yml  pipe_config.yml  sanity-checks.yml  test-read-budget.yml
lambda_functions/: example_event_object.json
lambda_functions/lambda_url_provider/: README.md
lambda_functions/read_budget_state/: README.md  pyproject.toml  read_budget_state.py
lambda_functions/start_nst/: README.md  pyproject.toml
lambda_functions/stop_nst/: README.md  pyproject.toml  stop_nst.py
lambda_functions/update_budget_state/: README.md  pyproject.toml  update_budget_state.py
lambda_url_provider/: README.md  generate_presigned_url.py  pyproject.toml
scripts/: build-lambda-zip.sh
terraform/: README.md  env_dev.tfvars  env_test_budget_lambda.tfvars  main.tf  outputs.tf  providers.tf  tfplan  tfplan-dev  variables.tf
terraform/ci/: ci.tf  ci.tfvars  main.tf
terraform/modules/aws_lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  pass_role.tf  variables.tf
terraform/modules/iam_policy/: README.md  main.tf
terraform/modules/iam_role/: main.tf
terraform/modules/nst_roles/: main.tf  outputs.tf  variables.tf
terraform/modules/s3_bucket/: main.tf  outputs.tf  variables.tf
