[tool.poetry]
name = "lambda-budget-checker"
version = "0.1.0"
description = "Provides Pre-signed URLs with Access Permission"
authors = ["Konstantinos Lampridis <boromir674@hotmail.com>"]
readme = "README.md"
license = "AGPL-3.0-only"
packages = [{include = "stop_nst.py"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
boto3 = "^1.35.57"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
